fix z-index sidebar

--- a/assets/css/desktop/_AdminLTE-nextdom.scss
+++ b/assets/css/desktop/_AdminLTE-nextdom.scss
@@ -10,8 +10,10 @@ body {
   z-index: 1030;
 }
 
-.main-sidebar {
-  z-index: 1020;
+@media (min-width: 768px) {
+  .sidebar-mini.sidebar-collapse .main-sidebar {
+    z-index: 1020;
+  }
 }
 
 .main-header .navbar {
